--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,17 @@
 spring:
+  datasource:
+    url: jdbc:h2:mem:mydb
+    username: sa
+    password: password
+    driverClassName: org.h2.Driver
+
   jpa:
     defer-datasource-initialization: true
-    open-in-view: true
+    #open-in-view: true
+    #database-platform: org.hibernate.dialect.H2Dialect
     hibernate:
       ddl-auto: create-drop
-    show-sql: false
+    show-sql: true
 
-server:
-  port: 8000
+  h2:
+    console.enabled: true
